--- a/src/app/views/processes/requisition/components/requisitions/requisitions.component.html
+++ b/src/app/views/processes/requisition/components/requisitions/requisitions.component.html
@@ -131,7 +131,7 @@
       <ngx-datatable-column [width]="150" [resizeable]="false" [sortable]="false" [draggable]="false" [canAutoResize]="false">
         <ng-template let-row="row" let-expanded="expanded" ngx-datatable-cell-template>
           <ng-container *ngIf="!row.folio && (row.status == 'Esperando')">
-            <a href="javascript:void(0)"  title="Expand/Collapse Row" class="btn btn-outline-danger" (click)="onCancel( row.id )">
+            <a href="javascript:void(0)"  title="Expand/Collapse Row" class="btn btn-danger" (click)="onCancel( row.id )">
               <i class="fa fa-close"></i>Cancelar
             </a>
           </ng-container>          
