Fixed #19 - Added proper documentation to the purchase-order-create-component, mainly on its methods.

--- a/src/app/views/processes/purchase-order/components/purchase-order-create/purchase-order-create.component.html
+++ b/src/app/views/processes/purchase-order/components/purchase-order-create/purchase-order-create.component.html
@@ -17,6 +17,7 @@
       <div *ngIf="providers && requisitions" class="animated fadeIn">
         <div class="row">
       
+          <!-- Providers Table -->
           <app-selectable-table class="col-md-12"
             [rows]="providers"
             [columns]="columnsProvider"
@@ -92,6 +93,8 @@
             <div class="card-header text-center">
               Detalle de orden de compra
             </div>
+
+            <!-- Requisition's Details Table -->
             <ngx-datatable #conceptRequisitionTable class="material" 
             [rows]="selectedProviderRequisitionDetails" 
             [columnMode]="'force'" 
