The third process is working how it has  to work.

--- a/src/app/views/processes/requisition/components/requisition-create/requisition-create.component.html
+++ b/src/app/views/processes/requisition/components/requisition-create/requisition-create.component.html
@@ -276,7 +276,7 @@
 
           </div>
           <div class="card-footer text-right">
-            <button [disabled]="(products.length < 1) || !action || !provider" type="submit" class="btn btn-outline-primary btn-lg"><i class="fa fa-check"></i> Registrar</button>
+            <button [disabled]="(products.length < 1) || !action || !provider" type="submit" class="btn btn-outline-primary btn-lg" [routerLink]="['../../../']"><i class="fa fa-check"></i> Registrar</button>
           </div>
 
         </form>
