--- a/src/app/views/processes/input-output/components/input-output-create/input-output-create.component.html
+++ b/src/app/views/processes/input-output/components/input-output-create/input-output-create.component.html
@@ -24,14 +24,14 @@
                     </div>
                   </div>
                   
-                  <div class="col-sm-12 col-md-3" *ngIf="dateRe">
+                  <div class="col-sm-12 col-md-3" *ngIf="dateIO">
                     <label for="">Fecha</label>
-                    <input type="date" name="date" #dateR class="form-control" [ngModel]="dateRe | date:'yyyy-MM-dd'" required>
+                    <input type="date" name="date" #dateR class="form-control" [ngModel]="dateIO | date:'yyyy-MM-dd'" required>
                   </div>
 
                   <div class="col-sm-12 col-md-6">
-                    <label>Ingrese folio</label>
-                    <input ngModel #bill="ngModel" name="billy" type='text' class="form-control"/>
+                    <label>Ingrese folio factura</label>
+                    <input ngModel #bill="ngModel" name="bill" type='text' class="form-control"/>
                   </div>
 
                   <div class="col-sm-12 col-md-6">
@@ -49,7 +49,7 @@
                       <label for="">Área solicitante</label>
                       <!-- <input *ngIf="!boss" type="text" readonly class="form-control read-only-normal-style" value=""> -->
                       <div  class="fakeInput">
-                        <!-- {{ boss.department.name }} -->
+                        {{ requisition.boss_department.department.name }}
                       </div>  
                     </div>
                   </div>
@@ -78,7 +78,7 @@
           </div>
           <div class="row" style="padding:20px">        
 
-            <div class="col-sm-12 col-md-12">
+            <div class="col-sm-12 col-md-12" *ngIf="products">
               <ngx-datatable #table style="height: 500px" #myTable class='material expandable' [columnMode]="'force'" [headerHeight]="50" [rowHeight]="50" [scrollbarV]="true" [scrollbarH]="true" [rows]='products$ | async'>
                 
                 <!-- <ngx-datatable-column [minWidth]="100" [maxWidth]="180" name="Clave presupuestal" prop="">
@@ -87,7 +87,7 @@
                   </ng-template>
                 </ngx-datatable-column> -->
   
-                <ngx-datatable-column [minWidth]="100" [maxWidth]="130" name="Partida" prop="concept">
+                <ngx-datatable-column [minWidth]="100" [maxWidth]="130" name="Partida" prop="concept.concept_number">
                   <ng-template let-value="value" ngx-datatable-cell-template>
                     <div class="break-word"><strong> {{value}} </strong></div> 
                   </ng-template>
@@ -95,7 +95,7 @@
   
                 <ngx-datatable-column [minWidth]="130" [maxWidth]="130" name="Cantidad" >
                   <ng-template let-row="row" ngx-datatable-cell-template>
-                    <input class="form-control" type="number" style="width:105px" value="{{ row.quantity }}" #quantity (keyup)="onQuantity(quantity.value, row.id)">
+                    <input class="form-control" type="number" style="width:105px" [value]="row.quantity > 0 ? row.quantity : ''" [placeholder]="row.quantity == 0 ? '0':''" #quantity (keyup)="onQuantity(quantity.value, row.id)">
                   </ng-template>
                 </ngx-datatable-column>
   
@@ -119,7 +119,7 @@
 
                 <ngx-datatable-column [minWidth]="160" [maxWidth]="160" name="Precio Unitario" width="160">
                   <ng-template let-row="row" ngx-datatable-cell-template>
-                    <input class="form-control" type="number" style="width:130px" [value]="row.cost > 0 ? row.cost : ''" [placeholder]="row.cost == 0 ? '0':''" #cost (keyup)="onCost(cost.value, row.id)">
+                    <input class="form-control" type="number" style="width:130px" [value]="row.price > 0 ? row.price : ''" [placeholder]="row.price == 0 ? '0':''" #price (keyup)="onCost(price.value, row.id)">
                   </ng-template>
                 </ngx-datatable-column>
                   
@@ -134,8 +134,8 @@
           
           </div>
           <div class="card-footer text-right">
-            <h2>Total: ${{ total$ | async }}</h2>
-            <button [disabled]="" type="submit" class="btn btn-outline-primary btn-lg"><i class="fa fa-check"></i> Registrar</button>
+            <h2>Total: {{ total$ | async | currency }}</h2><hr>
+            <button [disabled]="!bill.value" type="submit" class="btn btn-outline-primary btn-lg" [routerLink]="['../../all']"><i class="fa fa-check"></i> Registrar</button>
           </div>
 
         </form>
