#19 - Little improvements on the Purchase Order Process to handle better user experience.

--- a/src/app/views/processes/purchase-order/components/purchase-order-create/purchase-order-create.component.html
+++ b/src/app/views/processes/purchase-order/components/purchase-order-create/purchase-order-create.component.html
@@ -2,7 +2,7 @@
 
 <div class="animated fadeIn">
   <!-- Nav tabs -->
-  <tabset *ngIf="providers.length > 0 && requisitions.length > 0">
+  <tabset *ngIf="providers.length > 0 && requisitions.length > 0 && !loadingData.providers">
 
     <tab>
       <ng-template tabHeading>
