--- a/src/app/views/processes/input-output/components/input-output-create/input-output-create.component.html
+++ b/src/app/views/processes/input-output/components/input-output-create/input-output-create.component.html
@@ -135,7 +135,7 @@
           </div>
           <div class="card-footer text-right">
             <h2>Total: {{ total$ | async | currency }}</h2><hr>
-            <button [disabled]="!bill.value" type="submit" class="btn btn-outline-primary btn-lg" [routerLink]="['../../all']"><i class="fa fa-check"></i> Registrar</button>
+            <button [disabled]="!bill.value" type="submit" class="btn btn-outline-primary btn-lg"><i class="fa fa-check"></i> Registrar</button>
           </div>
 
         </form>
