--- a/src/app/views/processes/purchase-order/components/purchase-orders/purchase-orders.component.html
+++ b/src/app/views/processes/purchase-order/components/purchase-orders/purchase-orders.component.html
@@ -1,3 +1,124 @@
-<p>
-  purchase-orders works!
-</p>
+<div class="animated fadeIn">
+
+  <div class="col-sm-12 col-md-12">
+    <div class="card border-primary">
+      <div class="card-header">
+        Opciones
+      </div>
+      <div class="card-body">
+        <div class="row">
+
+          <div class="col-md-6 form-group">
+            <label>Filtrar por:</label>
+            <select name="" id="" class="form-control" [(ngModel)]="selectedFilter">
+              <ng-container *ngFor="let filter of filterBy">
+                <option value="{{ filter.value }}"> {{ filter.name }} </option>
+              </ng-container>
+            </select>
+          </div>
+
+          <div class="col-md-6 form-group">
+            <label>Ingrese el texto a filtrar</label>
+            <input [(ngModel)]="searchTextValue" type='text' class="form-control" placeholder='Filtrar por columna...' (keyup)='updateFilter()'/>
+          </div>
+
+        </div>
+      </div>
+      <div class="card-footer">
+        <h5>
+          <small>
+            <a href="javascript:void(0)" (click)="table.rowDetail.expandAllRows()">Expandir todas las filas</a> |
+            <a href="javascript:void(0)" (click)="table.rowDetail.collapseAllRows()">Colapsar todas las filas</a>
+          </small>
+        </h5>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-sm-12 col-md-12">
+    <ngx-datatable style="height: 550px" #myTable class='material expandable' [columnMode]="'force'" [headerHeight]="50" [footerHeight]="50"
+      [rowHeight]="60" [scrollbarV]="true" [rows]='purchaseOrders'>
+      <!-- Row Detail Template -->
+      <ngx-datatable-row-detail [rowHeight]="130" #myDetailRow (toggle)="onDetailToggle($event)">
+        <ng-template let-row="row" let-expanded="expanded" ngx-datatable-row-detail-template>
+
+          <div class="container scrollable-div">
+            <div class="row">
+
+              <div class="col-md-3">
+                <div class="form-group">
+                  <label for="id" class="col-md-2 col-form-label">ID Orden:</label>
+                    <input type='text' readonly class="form-control read-only-normal-style" value="{{ row.id }}"/>
+                </div>
+              </div>
+
+              <div class="col-md-3">
+                <div class="form-group">
+                  <label for="id" class="col-md-2 col-form-label">ID Proveedor:</label>
+                    <input type='text' readonly class="form-control read-only-normal-style" value="{{ row.providerId }}"/>
+                </div>
+              </div>
+        
+              
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="nombre" class="col-md-2 col-form-label">Nombre del proveedor:</label>
+                  <input type='text' readonly class="form-control read-only-normal-style" value="{{ row.provider_name }}"/>
+                </div>
+              </div>
+                
+              <div class="col-md-4">
+                <div class="form-group">
+                  <label for="jefe" class="col-md-2 col-form-label">Fecha:</label>
+                  <input type='text' readonly class="form-control read-only-normal-style" value="{{ row.date }}"/>
+                </div>
+              </div>
+    
+              <div class="col-md-2">
+                <div class="form-group">
+                  <ul class="list-group" style="margin-top: 35px;">
+                      <button class="btn btn-lg btn-link pull-right" [routerLink]="['../show/', row.id]">Ver</button>
+                  </ul>
+                </div>
+              </div>
+    
+            </div>
+          </div>
+
+        </ng-template>
+      </ngx-datatable-row-detail>
+      <!-- Column Templates -->
+      <ngx-datatable-column [width]="50" [resizeable]="false" [sortable]="false" [draggable]="false" [canAutoResize]="false">
+        <ng-template let-row="row" let-expanded="expanded" ngx-datatable-cell-template>
+          <a href="javascript:void(0)" [class.datatable-icon-right]="!expanded" [class.datatable-icon-down]="expanded" title="Expand/Collapse Row"
+            (click)="toggleExpandRow(row)">
+          </a>
+        </ng-template>
+      </ngx-datatable-column>
+
+      <ngx-datatable-column [minWidth]="100" name="ID Orden" prop="id" width="100">
+        <ng-template let-value="value" ngx-datatable-cell-template>
+          <strong>{{value}}</strong>
+        </ng-template>
+      </ngx-datatable-column>
+
+      <ngx-datatable-column [minWidth]="100" name="ID Proveedor" prop="providerId" width="100">
+        <ng-template let-value="value" ngx-datatable-cell-template>
+          <strong>{{value}}</strong>
+        </ng-template>
+      </ngx-datatable-column>
+
+      <ngx-datatable-column [minWidth]="250" name="Proveedor" prop="provider_name" width="250">
+        <ng-template let-value="value" ngx-datatable-cell-template>
+          <strong>{{value}}</strong>
+        </ng-template>
+      </ngx-datatable-column>
+
+      <ngx-datatable-column [minWidth]="250" name="Fecha" prop="date" width="250">
+        <ng-template let-value="value" ngx-datatable-cell-template>
+          <strong>{{value}}</strong>
+        </ng-template>
+      </ngx-datatable-column>
+    </ngx-datatable>
+  </div>
+</div>
