--- a/src/app/views/session/signin/signin.component.html
+++ b/src/app/views/session/signin/signin.component.html
@@ -93,7 +93,7 @@
               </div>
             </div>
             <div class="card-footer text-right">
-              <button [disabled]="signinForm.invalid" type="submit" class="btn btn-outline-primary"><i class="fa fa-check"></i> Registrar</button>
+              <button id="buttonSignin" [disabled]="signinForm.invalid" name="buttonSignin" type="submit" class="btn btn-outline-primary"><i class="fa fa-check"></i> Registrar</button>
             </div>
 
           </form>
