--- a/src/app/views/warehouse/budget-key/components/budget-key-edit/budget-key-edit.component.html
+++ b/src/app/views/warehouse/budget-key/components/budget-key-edit/budget-key-edit.component.html
@@ -162,7 +162,7 @@
                       <div class="col-sm-12">
                         <div class="form-group">
                           <label for="description">Descripción</label>
-                          <textarea [(ngModel)]="actionDescription" name="description" #descriptionInput #description="ngModel" class="form-control" rows="3" placeholder="Ingrese una descripción..."></textarea>
+                          <textarea [(ngModel)]="actionDescription" id="actions" name="description" #descriptionInput #description="ngModel" class="form-control" rows="3" placeholder="Ingrese una descripción..."></textarea>
                         </div>
                       </div>
                     </div><!--/.row-->
