--- a/src/app/views/warehouse/budget-key/components/budget-key-show/budget-key-show.component.html
+++ b/src/app/views/warehouse/budget-key/components/budget-key-show/budget-key-show.component.html
@@ -99,7 +99,7 @@
                                       </ng-template>
                                     </ngx-datatable-column>
                               
-                                    <ngx-datatable-column [minWidth]="300" [maxWidth]="800" name="Objetivos pi" prop="description" width="250">
+                                    <ngx-datatable-column [minWidth]="300" [maxWidth]="800" name="Descripción" prop="description" width="250">
                                       <ng-template let-value="value" ngx-datatable-cell-template>
                                         <strong>{{value}}</strong>
                                       </ng-template>
