--- a/src/app/views/warehouse/concept/components/concept-create/concept-create.component.html
+++ b/src/app/views/warehouse/concept/components/concept-create/concept-create.component.html
@@ -14,7 +14,7 @@
               <div class="col-sm-12">
                 <div class="form-group">
                   <label for="number">Número de partida</label>
-                  <input ngModel name="concept_number" #numberInput #number="ngModel" type="number" class="form-control" placeholder="Ingrese número de partida..." required min=0>
+                  <input ngModel name="concept_number" #numberInput #number="ngModel" type="number" class="form-control" placeholder="Ingrese número de partida..." required min=0 id="inputConceptNumber">
                   <ul *ngIf="number.invalid && (number.dirty || number.touched)" class="alert alert-danger" style="margin-top: .5em">
                     <li *ngIf="number.errors.required"> Debes ingresar un <strong>número</strong> </li>
                   </ul>
@@ -26,7 +26,7 @@
               <div class="col-sm-12">
                 <div class="form-group">
                   <label for="description">Descripción</label>
-                  <input ngModel name="description" #descriptionInput #description="ngModel" type="text" class="form-control" placeholder="Ingrese una descripción..." required minlength="2">
+                  <input ngModel name="description" #descriptionInput #description="ngModel" type="text" class="form-control" placeholder="Ingrese una descripción..." required minlength="2" id="inputConceptDescription">
                   <ul *ngIf="description.invalid && (description.dirty || description.touched)" class="alert alert-danger" style="margin-top: .5em">
                       <li *ngIf="description.errors.required"> Debes ingresar una <strong>descripción</strong> </li>
                       <li *ngIf="description.errors.minlength"> Debes ingresar una descripción como mínimo de <strong> {{ description.errors.minlength.requiredLength }} </strong> caracteres </li>
@@ -37,7 +37,7 @@
           </div>
           
           <div class="card-footer text-right">
-            <button [disabled]="formConcept.invalid" type="submit" class="btn btn-outline-primary"><i class="fa fa-check"></i> Registrar</button>
+            <button [disabled]="formConcept.invalid" type="submit" class="btn btn-outline-primary" id="buttonConcept"><i class="fa fa-check"></i> Registrar</button>
           </div>
 
         </form>
