--- a/src/app/views/warehouse/concept/components/concept-edit/concept-edit.component.html
+++ b/src/app/views/warehouse/concept/components/concept-edit/concept-edit.component.html
@@ -14,13 +14,13 @@
                   <div class="form-group">
 
                     <label for="number">Número de partida</label>
-                    <input [(ngModel)]="concept.concept_number" name="concept_number" #numberInput #number="ngModel" type="number" class="form-control" placeholder="Ingrese número de partida..." required min=0>
+                    <input [(ngModel)]="concept.concept_number" name="concept_number" #numberInput #number="ngModel" type="number" class="form-control" placeholder="Ingrese número de partida..." required min=0 id="inputNumberEdit">
                     <ul *ngIf="number.invalid && (number.dirty || number.touched)" class="alert alert-danger" style="margin-top: .5em">
                       <li *ngIf="number.errors.required"> Debes ingresar un <strong>número</strong> </li>
                     </ul>
                     
                     <label for="description">Descripción</label>
-                    <input [(ngModel)]="concept.description" name="description" #descriptionInput #description="ngModel" type="text" class="form-control" placeholder="Ingrese el nombre de un departamento..." required minlength="2">
+                    <input [(ngModel)]="concept.description" name="description" #descriptionInput #description="ngModel" type="text" class="form-control" placeholder="Ingrese descripción de partida..." required minlength="2" id="inputDescriptionEdit">
                     <ul *ngIf="description.invalid && (description.dirty || description.touched)" class="alert alert-danger" style="margin-top: .5em">
                         <li *ngIf="description.errors.required"> Debes ingresar una <strong>descripción de la partida.</strong> </li>
                         <li *ngIf="description.errors.minlength"> Debes ingresar una descripción como mínimo de <strong> {{ description.errors.minlength.requiredLength }} </strong> caracteres. </li>
@@ -31,7 +31,7 @@
               </div><!--/.row-->
             </div>
             <div class="card-footer text-right">
-              <button [disabled]="formConcept.invalid" type="submit" class="btn btn-outline-primary"><i class="fa fa-check"></i> Registrar</button>
+              <button [disabled]="formConcept.invalid" type="submit" class="btn btn-outline-primary" id="buttonEdit"><i class="fa fa-check"></i> Registrar</button>
             </div>
   
           </form>
