--- a/src/app/views/warehouse/project/components/project-create/project-create.component.html
+++ b/src/app/views/warehouse/project/components/project-create/project-create.component.html
@@ -13,7 +13,7 @@
               <div class="col-sm-12">
                 <div class="form-group">
                   <label for="description">Número de proyecto</label>
-                  <input ngModel name="project_number" #projectNumberInput #projectNumber="ngModel" type="number" class="form-control" placeholder="Ingrese un número de proyecto..." required min="00">
+                  <input ngModel name="project_number" id="project_number" #projectNumberInput #projectNumber="ngModel" type="number" class="form-control" placeholder="Ingrese un número de proyecto..." required min="00">
                   <ul *ngIf="projectNumber.invalid && (projectNumber.dirty || projectNumber.touched)" class="alert alert-danger" style="margin-top: .5em">
                       <li *ngIf="projectNumber.errors.required"> Debes ingresar un número de <strong>proyecto</strong> </li>
                   </ul>
@@ -24,7 +24,7 @@
               <div class="col-sm-12">
                 <div class="form-group">
                   <label for="description">Descripción</label>
-                  <input ngModel name="description" #descriptionInput #description="ngModel" type="text" class="form-control" placeholder="Ingrese una descripción..." required minlength="2">
+                  <input ngModel name="description" id="description" #descriptionInput #description="ngModel" type="text" class="form-control" placeholder="Ingrese una descripción..." required minlength="2">
                   <ul *ngIf="description.invalid && (description.dirty || description.touched)" class="alert alert-danger" style="margin-top: .5em">
                       <li *ngIf="description.errors.required"> Debes ingresar una <strong>descripción</strong> </li>
                       <li *ngIf="description.errors.minlength"> Debes ingresar una descripción como mínimo de <strong> {{ description.errors.minlength.requiredLength }} </strong> caracteres </li>
@@ -49,7 +49,7 @@
             </div><!--/.row-->
           </div>
           <div class="card-footer text-right">
-            <button [disabled]="formProject.invalid" type="submit" class="btn btn-outline-primary"><i class="fa fa-check"></i> Registrar</button>
+            <button [disabled]="formProject.invalid" type="submit" id="saveProject" class="btn btn-outline-primary"><i class="fa fa-check"></i> Registrar</button>
           </div>
 
         </form>
