--- a/src/app/views/warehouse/provider/components/provider-create/provider-create.component.html
+++ b/src/app/views/warehouse/provider/components/provider-create/provider-create.component.html
@@ -12,7 +12,7 @@
               <div class="col-sm-12">
                 <div class="form-group">
                   <label for="name">Nombre</label>
-                  <input ngModel name="name" #nameInput #name="ngModel" type="text" class="form-control" placeholder="Ingrese el nombre de un proveedor..." required minlength="2">
+                  <input ngModel name="name" #nameInput #name="ngModel" type="text" class="form-control" id="nameP" placeholder="Ingrese el nombre de un proveedor..." required minlength="2">
                   <ul *ngIf="name.invalid && (name.dirty || name.touched)" class="alert alert-danger" style="margin-top: .5em">
                       <li *ngIf="name.errors.required"> Debes ingresar un <strong>nombre</strong> </li>
                       <li *ngIf="name.errors.minlength"> Debes ingresar un nombre como mínimo de <strong> {{ name.errors.minlength.requiredLength }} </strong> caracteres </li>
@@ -24,7 +24,7 @@
               <div class="col-sm-12">
                 <div class="form-group">
                   <label for="phone">Telefono</label>
-                  <input ngModel name="phone" #phoneInput #phone="ngModel" type="text" class="form-control" placeholder="Ingrese el teléfono de un proveedor..." minlength="7">
+                  <input ngModel name="phone" id="phone" #phoneInput #phone="ngModel" type="text" class="form-control" placeholder="Ingrese el teléfono de un proveedor..." minlength="7">
                   <ul *ngIf="phone.invalid && (phone.dirty || phone.touched)" class="alert alert-danger" style="margin-top: .5em">
                       <li *ngIf="phone.errors.minlength"> Debes ingresar un teléfono como mínimo de <strong> {{ phone.errors.minlength.requiredLength }} </strong> caracteres </li>
                   </ul>
@@ -35,7 +35,7 @@
               <div class="col-sm-12">
                 <div class="form-group">
                   <label for="address">Dirección</label>
-                  <input ngModel name="address" #addressInput #address="ngModel" type="text" class="form-control" placeholder="Ingrese la dirección de un proveedor..." minlength="5">
+                  <input ngModel name="address" id="address" #addressInput #address="ngModel" type="text" class="form-control" placeholder="Ingrese la dirección de un proveedor..." minlength="5">
                   <ul *ngIf="address.invalid && (address.dirty || address.touched)" class="alert alert-danger" style="margin-top: .5em">
                       <li *ngIf="address.errors.minlength"> Debes ingresar una dirección como mínimo de <strong> {{ address.errors.minlength.requiredLength }} </strong> caracteres </li>
                   </ul>
@@ -46,7 +46,7 @@
               <div class="col-sm-12">
                 <div class="form-group">
                   <label for="email">E-mail</label>
-                  <input ngModel name="email" #emailInput #email="ngModel" type="email" class="form-control" placeholder="Ingrese el e-mail de un proveedor..." minlength="5" [pattern]="emailPattern">
+                  <input ngModel name="email" id="email" #emailInput #email="ngModel" type="email" class="form-control" placeholder="Ingrese el e-mail de un proveedor..." minlength="5" [pattern]="emailPattern">
                   <ul *ngIf="email.invalid && (email.dirty || email.touched)" class="alert alert-danger" style="margin-top: .5em">
                       <li *ngIf="email.errors.pattern"> Debes de ingresar un correo  <strong> valido </strong> </li>
                   </ul>
@@ -55,7 +55,7 @@
             </div><!--/.row-->
           </div>
           <div class="card-footer text-right">
-            <button [disabled]="formProvider.invalid" type="submit" class="btn btn-outline-primary"><i class="fa fa-check"></i> Registrar</button>
+            <button [disabled]="formProvider.invalid" type="submit" id="saveProvider" class="btn btn-outline-primary"><i class="fa fa-check"></i> Registrar</button>
           </div>
         </form>
       </div>
