--- a/src/app/views/aprovements/planning-aprovements/planning-aprovements.component.html
+++ b/src/app/views/aprovements/planning-aprovements/planning-aprovements.component.html
@@ -1,3 +1,3 @@
-<h1>
-    it works
-</h1>
+<div *ngFor="let department of departments">
+    <app-collapse-department [department]="department"></app-collapse-department>
+</div>
